# nux_slack_bot

./: 01be97c5-0e11-4eb4-0019-bd1bea26318b.csv  DATABRICKS_INSTALL.md  EXPERIMENT_RUNNER_README.md  MANIFEST.in  README.md  __init__.py  build_wheel.py  create_combined_metrics_table.py  create_metrics_table.sql  databricks_init_script.sh  debug_query_results.py  demo_experiment_runner.py  env_template.txt  main.py  pyproject.toml  requirements.txt  run_experiments.py  runme.sh  sample_data.csv  setup.py  show_generated_metrics.py  test_experimentation_mcp.py
config/: __init__.py  api_keys.py
data_models/: __init__.py  manual_experiments.yaml  metrics_metadata.yaml
experiment_runner/: __init__.py  analysis.py  experiment_config.py  metrics_storage.py  query_renderer.py  results_parser.py
integrations/: __init__.py  coda_client.py  mcp_client.py
services/: __init__.py  coda_service.py
sql_scripts/: combined_curie_results_unified.sql  combined_experiment_metrics.sql  explore.sql  get_curie_metrics.sql  scratch.sql
sql_scripts/consumer_id_level/: consumer_id_onboarding_dashpass.sql  consumer_id_onboarding_onboarding_funnel.sql  consumer_id_onboarding_overall_funnel.sql  consumer_id_onboarding_system_level_opt_in.sql  consumer_id_onboarding_topline.sql
sql_scripts/device_id_level/: device_id_app_download_download_only.sql  device_id_app_download_suma.sql  device_id_app_download_topline.sql  device_id_app_download_topline_app_only.sql  device_id_appclip_app_download.sql  device_id_appclip_checkout_funnel.sql  device_id_appclip_order_platform_split.sql  device_id_appclip_overall_funnel.sql  device_id_appclip_topline.sql  device_id_onboarding_dashpass.sql  device_id_onboarding_onboarding_funnel.sql  device_id_onboarding_overall_funnel.sql  device_id_onboarding_system_level_opt_in.sql  device_id_onboarding_topline.sql
utils/: __init__.py  logger.py  resource_loader.py  snowflake_connection.py
(+39 files in other folders)
